--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="point__item02">
                 <h3 class="point__item-title">POINT2 | プランが選べる</h3>
-                <div class="point__item-content">
+                <div class="point__item02-content-2">
                     <p class="point__item02-content-txt">「全身プラン」と、施術部位を選べる「部分脱毛プラン」から自由にお選びいただけます。</p>
                     <div class="point__item02-content-div">
                         <p class="point__item02-txt noto_semibold">全身プラン</p>
@@ -185,14 +185,18 @@
         </div>
     </section>
 
-    <div class="free free__block02">
-        <div class="free__block">
-            <p class="noto_semibold free__block-heading">無料体験実施中！</p>
-            <div class="noto_bold free__block-button">
+    <!-- 無料体験実施中！ -->
+
+    <div class="free__container02">
+        <div class="free__container">
+            <p class="noto_semibold free__container-heading-02">無料体験実施中！</p>
+            <div class="noto_bold free__container-button-02">
                 <a href="/reservation">カウンセリング予約<br>はこちら（無料）</a>
             </div>
         </div>
     </div>
+
+    <!-- ほかにも選べる２つのコース -->
 
     <section class="course">
         <div class="course__container">
@@ -219,6 +223,8 @@
         </div>
 
     </section>
+
+    <!-- お客様の声 -->
 
     <section class="voice">
         <div class="voice__container">
@@ -311,10 +317,12 @@
 
     </section>
 
-    <div class="free free__block02">
-        <div class="free__block">
-            <p class="noto_semibold free__block-heading">無料体験実施中！</p>
-            <div class="noto_bold free__block-button">
+    <!-- 無料体験実施中！ -->
+
+    <div class="free free__container03">
+        <div class="free__container">
+            <p class="noto_semibold free__container-heading-03">無料体験実施中！</p>
+            <div class="noto_bold free__container-button-03">
                 <a href="/reservation">カウンセリング予約<br>はこちら（無料）</a>
             </div>
         </div>
