--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 
     <!-- 無料体験実施中！ -->
 
-    <div class="free">
-        <div class="free__container">
-            <p class="noto_semibold free__container-heading">無料体験実施中！</p>
-            <div class="noto_bold free__container-button">
+    <div class="free01">
+        <div class="free01__container">
+            <p class="noto_semibold free01__container-heading">無料体験実施中！</p>
+            <div class="noto_bold free01__container-button">
                 <a href="/reservation">カウンセリング予約<br>はこちら（無料）</a>
             </div>
             <div class="noto_regular">
-                <p class="noto_semibold free__container-content">無料体験内容</p>
-                <p class="free__container-txt">〈脱毛体験〉V<span>(10分)or</span>両脇<span>(10分)</span></p>
-                <p class="free__container-txt">〈美顔体験〉フェイシャルトリートメント<span>(40分コース1回)</span></p>
+                <p class="noto_semibold free01__container-content">無料体験内容</p>
+                <p class="free01__container-txt">〈脱毛体験〉V<span>(10分)or</span>両脇<span>(10分)</span></p>
+                <p class="free01__container-txt">〈美顔体験〉フェイシャルトリートメント<span>(40分コース1回)</span></p>
             </div>
         </div>
     </div>
@@ -117,10 +117,10 @@
                 <p class="point__title-three noto_bold">3つのポイント</p>
             </h2>
             <div class="point__item01">
-                <h3 class="point__item-title">POINT1 | 通い放題</h3>
-                <div class="point__item-content">
+                <h3 class="point__item01-title">POINT1 | 通い放題</h3>
+                <div class="point__item01-content">
                     <p class="point__item01-content-txt">納得いくまで何度でも、追加料金なく安心して通っていただけます。</p>
-                    <div class="point__item-content-img">
+                    <div class="point__item01-content-img">
                         <div>
                             <img src="/assets/image/point1_logo_kbl.png" alt="当社">
                             <p class="point__item01-content-img-txt">来店1回で全身1回</p>
@@ -136,19 +136,19 @@
                 </div>
             </div>
             <div class="point__item02">
-                <h3 class="point__item-title">POINT2 | プランが選べる</h3>
-                <div class="point__item02-content-2">
+                <h3 class="point__item02-title">POINT2 | プランが選べる</h3>
+                <div class="point__item02-content">
                     <p class="point__item02-content-txt">「全身プラン」と、施術部位を選べる「部分脱毛プラン」から自由にお選びいただけます。</p>
-                    <div class="point__item02-content-div">
-                        <p class="point__item02-txt noto_semibold">全身プラン</p>
+                    <div class="point__item02-content-body">
+                        <p class="point__item02-content-body-txt noto_semibold">全身プラン</p>
                         <picture>
                             <source media="(min-width: 768px)" srcset="/assets/image/body_image_pc.png">
                             <img src="/assets/image/body_image_sp.png">
                         </picture>
                     </div>
                     <div>
-                        <p class="point__item02-txt noto_semibold">部分脱毛プラン</p>
-                        <div class="point__item02-content">
+                        <p class="point__item02-content-parts-txt noto_semibold">部分脱毛プラン</p>
+                        <div class="point__item02-content-parts-img">
                             <div>
                                 <img src="/assets/image/parts01.jpg" alt="">
                                 <p class="noto_semibold">うなじ</p>
@@ -179,18 +179,18 @@
                 </div>
             </div>
             <div class="point__item03">
-                <h3 class="point__item-title">POINT3 | 安心のサポート</h3>
-                <p class="point__item-content">提携医療機関のサポートがありますので、ご安心ください。</p>
+                <h3 class="point__item03-title">POINT3 | 安心のサポート</h3>
+                <p class="point__item03-content">提携医療機関のサポートがありますので、ご安心ください。</p>
             </div>
         </div>
     </section>
 
     <!-- 無料体験実施中！ -->
 
-    <div class="free__container02">
-        <div class="free__container">
-            <p class="noto_semibold free__container-heading-02">無料体験実施中！</p>
-            <div class="noto_bold free__container-button-02">
+    <div class="free02">
+        <div class="free02__container">
+            <p class="noto_semibold free02__container-heading">無料体験実施中！</p>
+            <div class="noto_bold free02__container-button">
                 <a href="/reservation">カウンセリング予約<br>はこちら（無料）</a>
             </div>
         </div>
@@ -236,7 +236,7 @@
                         <div class="slider__content-lower">
                             <img src="/assets/image/voice01.png" alt="">
                             <div class="slider__content-lower-txt">
-                                <p class="slider__lower-txt-name">30代 N.Tさま/会社員</p>
+                                <p class="slider__lower-txt-name">30代&nbsp;N.Tさま/会社員</p>
                                 <p class="slider__lower-txt-comment">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                         <div class="slider__content-lower">
                             <img src="/assets/image/voice02.png" alt="">
                             <div class="slider__content-lower-txt">
-                                <p class="slider__lower-txt-name">20代 Y.Kさま/会社員</p>
+                                <p class="slider__lower-txt-name">20代&nbsp;Y.Kさま/会社員</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
                                 </p>
                             </div>
@@ -263,7 +263,7 @@
                         <div class="slider__content-lower">
                             <img src="/assets/image/voice03.png" alt="">
                             <div class="slider__content-lower-txt">
-                                <p class="slider__lower-txt-name">20代 R.Bさま/大学生</p>
+                                <p class="slider__lower-txt-name">20代&nbsp;R.Bさま/大学生</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
                                 </p>
                             </div>
@@ -277,7 +277,7 @@
                         <div class="slider__content-lower">
                             <img src="/assets/image/voice01.png" alt="">
                             <div class="slider__content-lower-txt">
-                                <p class="slider__lower-txt-name">30代 N.Tさま/会社員</p>
+                                <p class="slider__lower-txt-name">30代&nbsp;N.Tさま/会社員</p>
                                 <p class="slider__lower-txt-comment">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
                             </div>
                         </div>
@@ -290,7 +290,7 @@
                         <div class="slider__content-lower">
                             <img src="/assets/image/voice02.png" alt="">
                             <div class="slider__content-lower-txt">
-                                <p class="slider__lower-txt-name">20代 Y.Kさま/会社員</p>
+                                <p class="slider__lower-txt-name">20代&nbsp;Y.Kさま/会社員</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
                                 </p>
                             </div>
@@ -304,7 +304,7 @@
                         <div class="slider__content-lower">
                             <img src="/assets/image/voice03.png" alt="">
                             <div class="slider__content-lower-txt">
-                                <p class="slider__lower-txt-name">20代 R.Bさま/大学生</p>
+                                <p class="slider__lower-txt-name">20代&nbsp;R.Bさま/大学生</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
                                 </p>
                             </div>
@@ -319,10 +319,10 @@
 
     <!-- 無料体験実施中！ -->
 
-    <div class="free free__container03">
-        <div class="free__container">
-            <p class="noto_semibold free__container-heading-03">無料体験実施中！</p>
-            <div class="noto_bold free__container-button-03">
+    <div class="free03">
+        <div class="free03__container">
+            <p class="noto_semibold free03__container-heading">無料体験実施中！</p>
+            <div class="noto_bold free03__container-button">
                 <a href="/reservation">カウンセリング予約<br>はこちら（無料）</a>
             </div>
         </div>
