--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <p class="point__item02-content-body-txt noto_semibold">全身プラン</p>
                         <picture>
                             <source media="(min-width: 768px)" srcset="/assets/image/body_image_pc.png">
-                            <img src="/assets/image/body_image_sp.png">
+                            <img src="/assets/image/body_image_sp.png" alt="">
                         </picture>
                     </div>
                     <div>
@@ -207,14 +207,14 @@
             <div class="course__item">
                 <div class="course__item01">
                     <p class="course__item-title">ボディコース</p>
-                    <div class="course__item-content">
+                    <div class="course__item01-content">
                         <p>ボディケアのスペシャリストが、お客様のお肌を優しく施術いたします。</p>
                         <img src="/assets/image/body_course.jpg" alt="">
                     </div>
                 </div>
                 <div class="course__item02">
                     <p class="course__item-title">フェイシャルコース</p>
-                    <div class="course__item-content">
+                    <div class="course__item02-content">
                         <p>確かな技術を持つエステティシャンが、お客様の理想のお肌に近づけます。</p>
                         <img src="/assets/image/facial_course.jpg" alt="">
                     </div>
@@ -234,7 +234,7 @@
                     <div class="slider__content">
                         <p class="slider__content-upper">脱毛コース</p>
                         <div class="slider__content-lower">
-                            <img src="/assets/image/voice01.png" alt="">
+                            <img src="/assets/image/voice01.png" alt="" style="width: 8.6rem; height: 11.4rem;">
                             <div class="slider__content-lower-txt">
                                 <p class="slider__lower-txt-name">30代&nbsp;N.Tさま/会社員</p>
                                 <p class="slider__lower-txt-comment">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
@@ -247,7 +247,7 @@
                     <div class="slider__content">
                         <p class="slider__content-upper">ボディコース</p>
                         <div class="slider__content-lower">
-                            <img src="/assets/image/voice02.png" alt="">
+                            <img src="/assets/image/voice02.png" alt="" style="width: 6.7rem; height: 11.3rem">
                             <div class="slider__content-lower-txt">
                                 <p class="slider__lower-txt-name">20代&nbsp;Y.Kさま/会社員</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
@@ -261,7 +261,7 @@
                     <div class="slider__content">
                         <p class="slider__content-upper">フェイシャルコース</p>
                         <div class="slider__content-lower">
-                            <img src="/assets/image/voice03.png" alt="">
+                            <img src="/assets/image/voice03.png" alt="" style="width: 7.8rem; height: 11.3rem">
                             <div class="slider__content-lower-txt">
                                 <p class="slider__lower-txt-name">20代&nbsp;R.Bさま/大学生</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
@@ -275,7 +275,7 @@
                     <div class="slider__content">
                         <p class="slider__content-upper">脱毛コース</p>
                         <div class="slider__content-lower">
-                            <img src="/assets/image/voice01.png" alt="">
+                            <img src="/assets/image/voice01.png" alt="" style="width: 8.6rem; height: 11.4rem;">
                             <div class="slider__content-lower-txt">
                                 <p class="slider__lower-txt-name">30代&nbsp;N.Tさま/会社員</p>
                                 <p class="slider__lower-txt-comment">納得いくまで何度も、追加料金なく安心して通うことができて大変満足しています。</p>
@@ -288,7 +288,7 @@
                     <div class="slider__content">
                         <p class="slider__content-upper">ボディコース</p>
                         <div class="slider__content-lower">
-                            <img src="/assets/image/voice02.png" alt="">
+                            <img src="/assets/image/voice02.png" alt="" style="width: 6.7rem; height: 11.3rem">
                             <div class="slider__content-lower-txt">
                                 <p class="slider__lower-txt-name">20代&nbsp;Y.Kさま/会社員</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
@@ -302,7 +302,7 @@
                     <div class="slider__content">
                         <p class="slider__content-upper">フェイシャルコース</p>
                         <div class="slider__content-lower">
-                            <img src="/assets/image/voice03.png" alt="">
+                            <img src="/assets/image/voice03.png" alt="" style="width: 7.8rem; height: 11.3rem">
                             <div class="slider__content-lower-txt">
                                 <p class="slider__lower-txt-name">20代&nbsp;R.Bさま/大学生</p>
                                 <p class="slider__lower-txt-comment">ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。ここにコピーが入ります。
@@ -329,7 +329,9 @@
     </div>
 
     <footer>
-        <img src="/assets/image/footer_logo.svg" alt="">
+        <a href="/">
+            <img src="/assets/image/footer_logo.svg" alt="">
+        </a>
     </footer>
 
 
