--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="通い放題、追加料金なし、安心サポートのKBL全身脱毛が今だけ初月0円">
-    <meta property="og:site_name" content="KIRAMEKI BEAUTY LABO" />
+    <meta property="og:site_name" content="KIRAMEKI BEAUTY LABO">
     <meta property="og:title" content="全身脱毛今だけ初月0円:KIRAMEKI BEAUTY LABO">
     <meta property="og:description" content="通い放題、追加料金なし、安心サポートのKBL全身脱毛が今だけ初月0円">
     <meta property="og:type" content="article">
@@ -17,10 +17,9 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Outfit:wght@100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
     <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
+        href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
     <link rel="stylesheet" href="/assets/style/main.css">
     <title>全身脱毛今だけ初月0円:KIRAMEKI BEAUTY LABO</title>
 </head>
@@ -335,10 +334,9 @@
     </footer>
 
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/assets/script/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="/assets/script/main.js"></script>
 </body>
 
 </html>
