--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="present noto_regular">
             <div class="present__container">
-                <p class="present__container-txt-now">今だけ!</p>
+                <p class="present__container-txt-now">今だけ&ensp;!</p>
                 <div>
                     <p class="present__container-txt-course">フェイシャルコース</p>
                     <p class="present__container-txt-three noto_semibold">3<span
@@ -114,7 +114,10 @@
             <div class="point__container">
                 <h2 class="point__title">
                     <span class="point__title-select">
-                        <img src="/assets/image/three_point.png" alt="Kirameki Beauty Laboが選ばれる">
+                        <picture>
+                            <source media="(min-width: 768px)" srcset="/assets/image/three_point_pc.png">
+                            <img src="/assets/image/three_point_sp.png" alt="Kirameki Beauty Laboが選ばれる">
+                        </picture>
                     </span>
                     <span class="point__title-three noto_bold">3つのポイント</span>
                 </h2>
@@ -249,7 +252,8 @@
                         <div class="slider__content">
                             <p class="slider__content-upper">ボディコース</p>
                             <div class="slider__content-lower">
-                                <img src="/assets/image/voice_02.png" alt="" style="width: 6.7rem; height: 11.3rem">
+                                <img src="/assets/image/voice_02.png" alt=""
+                                    style="width: 7.8rem; height: 11.3rem; padding-left: 1.1rem">
                                 <div class="slider__content-lower-txt">
                                     <p class="slider__lower-txt-name">20代&nbsp;Y.Kさま/会社員</p>
                                     <p class="slider__lower-txt-comment">
@@ -292,7 +296,8 @@
                         <div class="slider__content">
                             <p class="slider__content-upper">ボディコース</p>
                             <div class="slider__content-lower">
-                                <img src="/assets/image/voice_02.png" alt="" style="width: 6.7rem; height: 11.3rem">
+                                <img src="/assets/image/voice_02.png" alt=""
+                                    style="width: 7.8rem; height: 11.3rem; padding-left: 1.1rem">
                                 <div class="slider__content-lower-txt">
                                     <p class="slider__lower-txt-name">20代&nbsp;Y.Kさま/会社員</p>
                                     <p class="slider__lower-txt-comment">
